<resources>

    <!-- Adapter(JAVA) -> ListViewAdapter-->

    <!-- com/example/inftel07/myapplication(JAVA) -> Login -->
    <string name="urlLogin">http://192.168.183.43:8080/iChoppingWS/webresources/model.membership/</string>
    <string name="preference_file_key">SharedPreferences</string>

    <!-- com/example/inftel07/myapplication(JAVA) -> MainActivity -->
    <string name="urlProductCoordinate">http://192.168.183.43:8080/iChoppingWS/webresources/model.product/getProductByCoordinate/</string>
    <string name="urlProductUserName">http://192.168.183.43:8080/iChoppingWS/webresources/model.product/getProductByUsername/</string>
    <string name="urlProductQuery">http://192.168.183.43:8080/iChoppingWS/webresources/model.product/getProductByQuery/</string>
    <string name="loading">Loading</string>
    <string name="permissions">Enables permissions!</string>

    <!-- com/example/inftel07/myapplication(JAVA) -> NewProduct -->
    <string name="urlsaveProduct">http://192.168.183.43:8080/iChoppingWS/webresources/model.product/</string>
    <string name="fields">You must complete all fields</string>
    <string name="share">I have shared this product in iChopping: </string>
    <string name="newProductSave">New product saved</string>
    <string name="questionFacebook">¿Do you want to share this content on Facebook?</string>
    <string name="confirmation">Confirmation</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <!-- com/example/inftel07/myapplication(JAVA) -> ViewProduct -->
    <string name="emailClient">Choose an application to send the e-mail</string>
    <string name="questionDelete">Do you really want to delete it?</string>

    <!-- util(JAVA) -> Util -->
    <string name="interested">I am interested on: </string>

    <!--LAYOUT -> content_main-->
    <string name="empty_list">There is no product to show! Dont worry!</string>

    <!--LAYOUT -> content_new_product-->
    <string name="hint_nameProduct">Product name</string>
    <string name="hint_descriptionProduct">Product description</string>
    <string name="hint_price">Product price</string>
    <string name="btn_send">Post it</string>
    <string name="take_photo">Take a photo</string>


    <!-- MENU -> activity_main_drawer-->
    <string name="my_products">My products</string>
    <string name="products_area">Products near you</string>
    <string name="logout">Log out</string>
    <string name="options">Options</string>
    <string name="new_product">New product</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MENU -> main-->
    <string name="search">Search</string>


    <!--Manifest-->
    <string name="app_name">iChopping</string>
    <string name="facebook_app_id">849867805124535</string>


</resources>
