<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/new_product"
            android:icon="@drawable/ic_new"
            android:title="@string/new_product" />

        <item
            android:id="@+id/my_products"
            android:icon="@drawable/ic_product"
            android:title="@string/my_products" />
        <item
            android:id="@+id/products_area"
            android:icon="@drawable/ic_map"
            android:title="@string/products_area" />

    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
